--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <h2>Three Helpful Links</h2>
 
-      <p><a href="http://www.medicalnewstoday.com/articles/269538.php">Health Benefits</a></p>
-      <p><a href="http://www.canadianliving.com/health/nutrition/article/10-healthy-green-tea-recipes">10 Green Tea Recipes</a></p>
-      <p><a href="https://www.souviatea.com/store/">Souvia Tea Shop</a></p>
+      <p><a href="http://www.medicalnewstoday.com/articles/269538.php" target="_blank">Health Benefits</a></p>
+      <p><a href="http://www.canadianliving.com/health/nutrition/article/10-healthy-green-tea-recipes" target="_blank">10 Green Tea Recipes</a></p>
+      <p><a href="https://www.souviatea.com/store/" target="_blank">Souvia Tea Shop</a></p>
   </main>
 </div>
   <footer>
